--- a/src/main/resources/templates/MenuEstudiante.html
+++ b/src/main/resources/templates/MenuEstudiante.html
@@ -25,7 +25,7 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 					<div class="navbar-nav">
-						<a class="nav-link" href="/prueba/listar">Listar Pruebas</a>
+						<a class="nav-link" href="/prueba/listadoPruebasParaEstudiantes">Realizar Pruebas</a>
 					</div>
 				</div>
 			</nav>
