--- a/src/main/resources/templates/barraMenu.html
+++ b/src/main/resources/templates/barraMenu.html
@@ -27,8 +27,10 @@
 						<a class="nav-link" href="/menu">Inicio</a> 
 						<a class="nav-link" href="/prueba/crearPrueba">Prueba nueva</a> 
 						<a class="nav-link" href="/prueba/crearPregunta">Pregunta</a>
-						<a class="nav-link" href="/prueba/listar">Listar Pruebas</a>
+						<a class="nav-link" href="/prueba/listadoPruebasParaProfesores">Listar Pruebas</a>
 						<a class="nav-link" href="/prueba/formularioCrearPruebaAutomatica">Prueba Automatica</a>
+						<a class="nav-link" href="/pregunta/listarPreguntas">Listar preguntas</a>
+						
 					</div>
 				</div>
 			</nav>
