--- a/src/main/resources/templates/prueba/crearPregunta.html
+++ b/src/main/resources/templates/prueba/crearPregunta.html
@@ -60,6 +60,8 @@
 					onclick="cargarFragmentoVerdaderoFalso()" id="tabVF">Verdadero/Falso</a>
 				<a class="flex-sm-fill text-sm-center nav-link" href="#"
 					onclick="cargarFragmentoMultipleOpcion()" id="tabMO">Multiple opcion</a>
+				<a class="flex-sm-fill text-sm-center nav-link" href="#"
+					onclick="cargarFragmentoRespuestaCorta()" id="tabRC">Respuesta corta</a>
 
 			</nav>
 		</div>
@@ -72,5 +74,6 @@
 
 	<div class="seccionListarOpciones" id="seccion-listar-opciones">
 	</div>
+	
 </body>
 </html>
