se guardan dos tipos de preguntas nuevas

--- a/src/main/resources/templates/prueba/crearPregunta.html
+++ b/src/main/resources/templates/prueba/crearPregunta.html
@@ -62,6 +62,8 @@
 					onclick="cargarFragmentoMultipleOpcion()" id="tabMO">Multiple opcion</a>
 				<a class="flex-sm-fill text-sm-center nav-link" href="#"
 					onclick="cargarFragmentoRespuestaCorta()" id="tabRC">Respuesta corta</a>
+				<a class="flex-sm-fill text-sm-center nav-link" href="#"
+					onclick="cargarFragmentoCorrelacion()" id="tabCorrelacion">Correlacion</a>
 
 			</nav>
 		</div>
