--- a/src/main/resources/templates/prueba/realizarPrueba.html
+++ b/src/main/resources/templates/prueba/realizarPrueba.html
@@ -37,7 +37,7 @@
 							<td th:text="${pregunta.enunciado}"></td>
 							<td>
 								<div th:each="opcion, iteratorOpciones:${pregunta.opciones}">
-									<div th:if="${pregunta.tipo == 0}"
+									<div th:if="${pregunta.tipo == 1}"
 										<input type="radio" th:id="${opcion.id}"
 											th:value="${opcion.id}" th:name="${pregunta.id}"
 											th:field="${prueba.preguntas[__${iteratorPreguntas.index}__].idOpcionIngresada}">
@@ -50,9 +50,9 @@
 	
 									</div>
 									
-									<div th:if="${pregunta.tipo == 1}">
+									<div th:if="${pregunta.tipo == 2}">
 										<input type="text" th:value="${opcion.descOpcion}"
-											th:field="${prueba.preguntas[__${iteratorPreguntas.index}__].opciones[__${iteratorOpciones.index}__].valor}">
+											th:field="${prueba.preguntas[__${iteratorPreguntas.index}__].opciones[__${iteratorOpciones.index}__].valorIngresado}">
 									</div>
 								</div>
 							</td>
