--- a/src/main/resources/templates/Menu.html
+++ b/src/main/resources/templates/Menu.html
@@ -4,48 +4,46 @@
 <html lang="en">
 
 <head>
+<style>
+a:link, a:visited {
+	background-color: #f44336;
+	color: white;
+	padding: 14px 25px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+}
 
-</header>
+a:hover, a:active {
+	background-color: red;
+}
+</style>
+</head>
+
+
 <body>
-	
+
 
 	<div class="container">
-		<center><h2>Cuestionarios, Exámenes, Test, y muchos tipos de evaluaciones
-			más</h2></center>
+		<center>
+			<h2>Cuestionarios, Exámenes, Test, y muchos tipos de evaluaciones más</h2>
+		</center>
 
 	</div>
-	
-	
+
+
 
 	<center>
 		<img
 			src="https://sni.gob.ec/documents/10180/107789/evaluacion.png/d176f16e-a204-445a-90fc-17b120d89bde?t=1442609067899">
 	</center>
-	
+
 	<center>
-	
-<style>
-a:link, a:visited {
-  background-color: #f44336;
-  color: white;
-  padding: 14px 25px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-}
-
-a:hover, a:active {
-  background-color: red;
-}
-</style>
-</head>
-<body>
 
 
-<a href="MenuEstudiante" target="_blank">Estudiante</a>
-
-<a href="MenuProfesor" target="_blank">Docente</a>
-	
+		<a href="MenuEstudiante" target="_blank">Estudiante</a> 
+		<a href="MenuProfesor" target="_blank">Docente</a>
+		<a href="MenuAdministrativo" target="_blank">Administrativo</a>
 	</center>
 
 </body>
