--- a/src/main/resources/templates/MenuAdministrativo.html
+++ b/src/main/resources/templates/MenuAdministrativo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 <title>Menu Estudiantes</title>
 </head>
@@ -25,13 +25,12 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 					<div class="navbar-nav">
-						<a class="nav-link" href="/menu">Inicio</a> 
-						<a class="nav-link" href="/prueba/listadoPruebasParaEstudiantes">Realizar Pruebas</a>
+							<a class="nav-link" href="/menu">Inicio</a> 
+							<a class="nav-link" href="/profesor/listadoProfesores">Nuevo Profesor</a>
+							<a class="nav-link" href="/alumno/listadoPruebasParaEstudiantes">Nuevo Alumno</a>
 					</div>
 				</div>
 			</nav>
-			
-				<img src="https://static.vecteezy.com/system/resources/previews/002/173/392/non_2x/student-studying-at-home-free-vector.jpg">
 			
 		</div>
 
