--- a/src/main/resources/templates/MenuProfesor.html
+++ b/src/main/resources/templates/MenuProfesor.html
@@ -29,7 +29,7 @@
 						<a class="nav-link" href="/prueba/crearPrueba">Prueba nueva</a> 
 						<a class="nav-link" href="/prueba/listadoPruebasParaProfesores">Listado de Pruebas</a> 
 						<a class="nav-link" href="/prueba/crearPregunta">Pregunta</a>
-						<a class="nav-link" href="/prueba/formularioCrearPruebaAutomatica">Prueba Automatica</a>
+						<a class="nav-link" href="/prueba/formularioCrearPruebaAutomatica">Realizar Prueba Automatica</a>
 						<a class="nav-link" href="/pregunta/listarPreguntas">Listar preguntas</a>
 					</div>
 				</div>
