--- a/src/main/resources/templates/manteProfesores.html
+++ b/src/main/resources/templates/manteProfesores.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+<div th:replace="barraMenu :: headerBarra"></div>
 <meta charset="ISO-8859-1">
 <title>Profesores</title>
 <link rel="stylesheet"
@@ -8,11 +9,17 @@
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
 </head>
+
+<header>
+<div th:replace="barraMenu :: menuVar"></div>
+</header>
+
+
 <body>
 <div class="container my-2" align="center">
  
 <h3>Lista de Profesores</h3>
-<a th:href="@{/agregarProfesor}" class="btn btn-primary btn-sm mb-3" >Nuevo Profesor</a>
+<a th:href="@{/profesor/agregarProfesor}" class="btn btn-primary btn-sm mb-3" >Nuevo Profesor</a>
     <table style="width:80%" border="1"
            class = "table table-striped table-responsive-md">
     <thead>
@@ -22,6 +29,7 @@
     <th>Apellido</th>
     <th>Email</th>
     <th>Direccion</th>
+    <th>Acciones</th>
   </tr>
   </thead>
   <tbody>
@@ -33,7 +41,7 @@
         <td th:text="${profesor.direccion}"></td>
         <td> <a th:href="@{/showFormForUpdate/{id}(id=${profesor.id})}"
                 class="btn btn-primary">Editar</a>
-                <a th:href="@{/deleteEmployee/{id}(id=${profesor.id})}"
+                <a th:href="@{/profesor/borrar/{id}(id=${profesor.id})}"
                 class="btn btn-danger">Borrar</a>
     </td>
   </tr>
