--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -17,7 +17,7 @@
             <input type="text" th:field="*{identificador}" placeholder="Usuario"
                 class="form-control mb-4 col-4"/> 
                 
-            <input type="text" th:field="*{pass}" placeholder="Password"
+            <input type="password" th:field="*{pass}" placeholder="Password"
              class="form-control mb-4 col-4"/> 
                 
                       
