--- a/src/main/resources/templates/principal.html
+++ b/src/main/resources/templates/principal.html
@@ -41,9 +41,7 @@ a:hover, a:active {
 	<center>
 
 
-		<a href="MenuEstudiante" target="_blank">Estudiante</a> 
-		<a href="MenuProfesor" target="_blank">Docente</a>
-		<a href="MenuAdministrativo" target="_blank">Administrativo</a>
+		<a href="login" target="_blank">Ingresar</a> 
 	</center>
 
 </body>
