--- a/src/main/resources/templates/prueba/crearPregunta.html
+++ b/src/main/resources/templates/prueba/crearPregunta.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-<div th:replace="barraMenu :: headerBarra"></div>
 <meta charset="ISO-8859-1">
-<title>Crear Pruebas</title>
+<title>Crear Pregunta</title>
 
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -31,7 +30,7 @@
 </head>
 
 <header>
-<div th:replace="barraMenu :: menuVar"></div>
+	<div th:replace="barraMenu :: menuProfesor"></div>
 </header>
 
 <body>
