--- a/src/main/resources/templates/prueba/crearPrueba.html
+++ b/src/main/resources/templates/prueba/crearPrueba.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head >
- 	<div th:replace="barraMenu :: headerBarra"></div>
+
 	<meta charset="ISO-8859-1">
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -43,7 +43,7 @@
 
 
 <header>
-<div th:replace="barraMenu :: menuVar"></div>
+	<div th:replace="barraMenu :: menuProfesor"></div>
 </header>
 
 <body>
