--- a/src/main/resources/templates/prueba/crearPruebaAutomatica.html
+++ b/src/main/resources/templates/prueba/crearPruebaAutomatica.html
@@ -2,7 +2,6 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-<div th:replace="barraMenu :: headerBarra"></div>
 <meta charset="ISO-8859-1">
 
 <link rel="stylesheet"
@@ -14,7 +13,7 @@
 
 
 <header>
-	<div th:replace="barraMenu :: menuVar"></div>
+	<div th:replace="barraMenu :: menuProfesor"></div>
 </header>
 
 <body>
