--- a/src/main/resources/templates/prueba/realizarPrueba.html
+++ b/src/main/resources/templates/prueba/realizarPrueba.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-<div th:replace="barraMenu :: headerBarra"></div>
+
 <meta charset="ISO-8859-1">
 <title>Nueva Prueba</title>
 <link rel="stylesheet"
@@ -10,7 +10,7 @@
 	crossorigin="anonymous">
 </head>
 <header>
-<div th:replace="barraMenu :: menuVar"></div>
+	<div th:replace="barraMenu :: menuAlumno"></div>
 </header>
 <body>
 
