--- a/src/main/resources/templates/pregunta/listarOpciones.html
+++ b/src/main/resources/templates/pregunta/listarOpciones.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-<div th:replace="barraMenu :: headerBarra"></div>
 <meta charset="ISO-8859-1">
 <title>Listado de opciones</title>
 <link rel="stylesheet"
@@ -10,7 +9,7 @@
 	crossorigin="anonymous">
 </head>
 <header>
-<div th:replace="barraMenu :: menuVar"></div>
+<div th:replace="barraMenu :: menuProfesor"></div>
 </header>
 <body>
 
