listado de resultados

--- a/src/main/resources/templates/prueba/realizarPrueba.html
+++ b/src/main/resources/templates/prueba/realizarPrueba.html
@@ -32,21 +32,26 @@
 				<div>
 					<form id="formulario" th:object="${prueba}"
 						th:action="@{/prueba/corregir}" method="post">
+						<!-- estos campos estan ocultos, son necesarios para enviar el dato de vuelta al controlador -->
+						<input type="hidden" th:field="${prueba.id}">
+						
 						<tr th:each="pregunta, iteratorPreguntas :${prueba.preguntas}">
 							<td th:text="${pregunta.id}"></td>
 							<td th:text="${pregunta.enunciado}"></td>
+							
 							<td>
 								<div th:each="opcion, iteratorOpciones:${pregunta.opciones}">
-									<div th:if="${pregunta.tipo == 1}"
+									<input type="hidden" th:field="${prueba.preguntas[__${iteratorPreguntas.index}__].tipo}">
+									
+									<div th:if="${pregunta.tipo == 1}">
 										<input type="radio" th:id="${opcion.id}"
 											th:value="${opcion.id}" th:name="${pregunta.id}"
 											th:field="${prueba.preguntas[__${iteratorPreguntas.index}__].idOpcionIngresada}">
 	
 										<label th:for="${opcion.id}" th:text="${opcion.descOpcion}"></label>
-										<input type="hidden"
-											th:field="${prueba.preguntas[__${iteratorPreguntas.index}__].id}">
-										<input type="hidden"
-											th:field="${prueba.preguntas[__${iteratorPreguntas.index}__].idOpcionCorrecta}">
+										<input type="hidden" th:field="${prueba.preguntas[__${iteratorPreguntas.index}__].id}">
+										
+										<input type="hidden" th:field="${prueba.preguntas[__${iteratorPreguntas.index}__].idOpcionCorrecta}">
 	
 									</div>
 									
