--- a/src/main/resources/templates/barraMenu.html
+++ b/src/main/resources/templates/barraMenu.html
@@ -20,7 +20,7 @@
 			
 	<div th:fragment="menuAlumno">
 		<div th:replace="barraMenu :: headerBarra"></div>
-		<nav class="navbar navbar-expand-lg navbar-blue bg-dark">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			
 			<!-- Alumno -->
 			<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -36,7 +36,7 @@
 	
 	<div th:fragment="menuProfesor">
 		<div th:replace="barraMenu :: headerBarra"></div>
-		<nav class="navbar navbar-expand-lg navbar-blue bg-dark">
+		<nav class="navbar navbar-expand-lg navbar-light bg-success">
 			
 			<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 				<div class="navbar-nav">
