--- a/src/main/resources/templates/barraMenu.html
+++ b/src/main/resources/templates/barraMenu.html
@@ -59,7 +59,7 @@
 				<div class="navbar-nav">
 					<a class="nav-link" href="/principal">Inicio</a> 
 					<a class="nav-link" href="/profesor/listadoProfesores">Nuevo Profesor</a>
-					<a class="nav-link" href="/alumno/listadoPruebasParaEstudiantes">Nuevo Alumno</a>
+					<a class="nav-link" href="/alumno/listadoAlumnos">Nuevo Alumno</a>
 				</div>
 			</div>
 		</nav>
