--- a/src/main/resources/templates/manteAlumno.html
+++ b/src/main/resources/templates/manteAlumno.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta charset="ISO-8859-1">
-<title>Profesores</title>
+<title>Alumno</title>
 <link rel="stylesheet"
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
@@ -18,8 +18,8 @@
 <body>
 <div class="container my-2" align="center">
  
-<h3>Lista de Profesores</h3>
-<a th:href="@{/profesor/agregarProfesor}" class="btn btn-primary btn-sm mb-3" >Nuevo Profesor</a>
+<h3>Lista de Alumno</h3>
+<a th:href="@{/alumno/agregarAlumno}" class="btn btn-primary btn-sm mb-3" >Nuevo Alumno</a>
     <table style="width:80%" border="1"
            class = "table table-striped table-responsive-md">
     <thead>
@@ -34,15 +34,14 @@
   </tr>
   </thead>
   <tbody>
-  <tr th:each="profesor:${profesores}">
-        <td th:text="${profesor.id}"></td>
-        <td th:text="${profesor.nombre}"></td>
-        <td th:text="${profesor.apellido}"></td>
-        <td th:text="${profesor.email}"></td>
-        <td th:text="${profesor.direccion}"></td>
-        <td th:text="${profesor.usuario}"></td>
-        <td>
-                <a th:href="@{/profesor/borrar/{id}(id=${profesor.id})}"
+  <tr th:each="alumno:${alumnos}">
+        <td th:text="${alumno.id}"></td>
+        <td th:text="${alumno.nombre}"></td>
+        <td th:text="${alumno.apellido}"></td>
+        <td th:text="${alumno.email}"></td>
+        <td th:text="${alumno.direccion}"></td>
+        <td th:text="${alumno.usuario}"></td>
+        <td> <a th:href="@{/alumno/borrar/{id}(id=${alumno.id})}"
                 class="btn btn-danger">Borrar</a>
     </td>
   </tr>
