--- a/src/main/resources/templates/barraMenu.html
+++ b/src/main/resources/templates/barraMenu.html
@@ -54,12 +54,14 @@
 	<div th:fragment="menuAdmin">
 		<div th:replace="barraMenu :: headerBarra"></div>
 		<nav class="navbar navbar-expand-lg navbar-blue bg-dark">
+		
+		
 			
 			<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 				<div class="navbar-nav">
 					<a class="nav-link" href="/principal">Inicio</a> 
-					<a class="nav-link" href="/profesor/listadoProfesores">Nuevo Profesor</a>
-					<a class="nav-link" href="/alumno/listadoAlumnos">Nuevo Alumno</a>
+					<a class="nav-link" href="/profesor/listadoProfesores">Mantenimiento Profesores</a>
+					<a class="nav-link" href="/alumno/listadoAlumnos">Mantenimiento Alumnos</a>
 				</div>
 			</div>
 		</nav>
