--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -27,7 +27,8 @@
 	
 	
 	<div th:if="${usuario == 2}">
-		<div th:replace="barraMenu :: menuAdmin"></div>	
+		<div th:replace="barraMenu :: menuAdmin"></div>
+		<img src="https://static.vecteezy.com/system/resources/previews/004/988/962/non_2x/mechanical-gear-with-repair-wrench-inside-free-vector.jpg" width="60%">	
 	</div>
 	
 
