correccion de errores

--- a/src/main/resources/templates/prueba/fragment_preguntaCorrelacion.html
+++ b/src/main/resources/templates/prueba/fragment_preguntaCorrelacion.html
@@ -40,7 +40,8 @@
 					<thead class="thead-dark">
 						<tr>
 							<th>Opcion</th>
-							<th>Correcta</th>
+							<th>Ingrese valor correcto</th>
+							<th>Valor Correcto</th>
 							<th>Accion</th>
 						</tr>
 					</thead>
