--- a/src/main/resources/templates/manteProfesores.html
+++ b/src/main/resources/templates/manteProfesores.html
@@ -44,6 +44,8 @@
         <td>
                 <a th:href="@{/profesor/borrar/{id}(id=${profesor.id})}"
                 class="btn btn-danger">Borrar</a>
+                 <a th:href="@{/profesor/editar/{id}(id=${profesor.id})}"
+                class="btn btn-warning">Editar</a>
     </td>
   </tr>
   </tbody>
