Error Pequeño en HTML

--- a/src/main/resources/templates/prueba/resultadosDeAlumno.html
+++ b/src/main/resources/templates/prueba/resultadosDeAlumno.html
@@ -36,7 +36,7 @@
 			<tbody>
 				<tr th:each="resultado:${resultados}">
 					<td th:text="${resultado.id}"></td>
-					<td th:text="${resultado.prueba.titulo></td>
+					<td th:text="${resultado.prueba.titulo}"></td>
 					<td th:text="${resultado.fecha}"></td>
 					<td th:text="${resultado.cantPreguntas}"></td>
 					<td th:text="${resultado.cantRespuestasBien}"></td>
